--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
   background-color: red;
 } */
 
-:root {
+/* :root {
   --awesomeColor: #2980b9;
 }
 
@@ -18,4 +18,12 @@ li:first-child a {
 
 :--headers {
   color: #8e44ad;
-}
+} */
+
+@custom-media --ipad-size (450px <= width < 850px);
+
+@media (--ipad-size){
+  body{
+    background-color: red;
+  }
+} 
