--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,20 @@ li:first-child a {
   }
 }  */
 
-h1{
- color: gray(0);
- font-family: system-ui;
-}
+main {
+  background-color: blue;
+  & section {
+    background-color: red;
+    width: 500px;
+    & li {
+      background-color: yellow;
+      width: 400px;
+      & a {
+        color: black;
+        &:hover{
+          font-size: 30px;
+        }
+      }
+    }
+  }
+} 
