--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 :root {
-  --padding: 25px;
-  --borderTop: 1px solid rgba(0, 0, 0, 0.1);
+  --borderRadius: 15px;
 }
 
 * {
@@ -20,154 +19,69 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #fafafc;
+  color: rgba(0, 0, 0, 0.8);
+  padding: 0px 15px;
 }
 
 .header {
-  margin-top: 80px;
-  padding-left: var(--padding);
-  margin-bottom: 50px;
+  margin-top: 50px;
+  margin-bottom: 25px;
 }
 
-.navigaiton {
-  padding: 0px var(--padding);
-  margin-bottom: 50px;
+.header .header__title {
+  margin-bottom: 5px;
+  font-size: 45px;
 }
 
-.navigaiton .navigation__list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  display: grid;
-  grid-template-columns: repeat(4, 50px);
-  grid-gap: 40px;
-}
-
-.navigation__list .navigation__item {
-  display: grid;
-  grid-template-rows: 3fr 1fr;
-  grid-gap: 10px;
-  text-align: center;
-  transition: opacity 0.1s linear;
-}
-
-.navigation__item .item__icon {
-  background-color: white;
-  border-radius: 50%;
-  box-shadow: 0 10px 35px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.1);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 50px;
-  width: 50px;
-  transition: box-shadow 0.2s linear;
-  cursor: pointer;
-}
-
-.navigation__list:hover .navigation__item {
-  opacity: 0.5;
-}
-
-.navigation__list .navigation__item:hover {
-  opacity: 1;
-}
-
-.navigation__list .navigation__item:hover .item__icon {
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05), 0 6px 10px rgba(0, 0, 0, 0.1);
-}
-
-.item__icon .icon__emoji {
+.header .header__subtitle {
+  font-weight: 200;
   font-size: 20px;
 }
 
-.navigation__item .item__text {
-  font-size: 14px;
-  font-weight: 600;
-}
-
-.featured {
-  padding: var(--padding);
-  padding-top: 25px;
-  border-top: var(--borderTop);
-}
-
-.featured .featured__title {
-  margin: 0;
-  font-size: 18px;
-  margin-bottom: 20px;
-}
-
-.featured .featured__wrapper {
-  overflow: scroll;
+.grid {
   display: grid;
-  grid-auto-columns: minmax(200px, 1fr);
-  grid-auto-flow: column;
-  grid-gap: 30px;
-  padding-bottom: 20px;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
 }
 
-.featured-meal {
-  height: 150px;
-  border-radius: 10px;
-  display: flex;
-  align-items: flex-end;
-  padding: 20px;
-  color: white;
-  justify-content: space-between;
+.grid .grid__hero-item {
+  grid-column: span 2;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url(https://i.pinimg.com/564x/b8/c0/7a/b8c07a5a63f15415d036ea209abee11d.jpg);
   background-size: cover;
   background-position: center center;
-}
-
-.featured-meal:first-child {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url(https://i.pinimg.com/564x/d9/26/7e/d9267eb5f9756e0664191f0d148a11bd.jpg);
-}
-
-.featured-meal:last-child {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url(https://i.pinimg.com/564x/2f/db/39/2fdb393218271fbf0464e8c0818a1a2b.jpg);
-}
-
-.featured-meal:nth-child(2) {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url(https://i.pinimg.com/564x/b7/90/da/b790daca8c52b830b63c6d14d3f1cad7.jpg);
-}
-
-.featured-meal:nth-child(3) {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url(https://i.pinimg.com/564x/7c/dc/81/7cdc811124f1e0bdce19712fec67c22c.jpg);
-}
-
-.featured-meal__title {
-  margin-right: 10px;
-}
-.featured-meal__button {
-  background-color: white;
-
-  font-size: 15px;
-  text-align: center;
+  color: white;
+  padding: 20px 10px;
+  border-radius: var(--borderRadius);
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
 }
 
-.recipes {
-  margin-top: 25px;
-  padding-top: 25px;
-  border-top: var(--borderTop);
-}
-.recipes__list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+.grid__hero-item .hero-item__title {
+  font-weight: 400;
+  align-self: flex-end;
+  font-size: 22px;
 }
 
-.recipes__list .recipe:nth-child(odd) {
-  background-color: white;
+.grid__hero-item .hero-item__subtitle {
+  width: 70%;
+  font-weight: 300;
+  font-size: 16px;
 }
 
-.recipes__list .recipe {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 15px var(--padding);
+.grid-item .grid-item__title {
+  font-weight: 800;
+  font-size: 16px;
+}
+
+.grid-item .grid-item__photo {
+  max-width: 100%;
+  border-radius: var(--borderRadius);
+  margin-bottom: 10px;
+}
+
+.grid-item .grid-item__subtitle {
+  color: rgba(0, 0, 0, 0.6);
 }
